--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,12 @@
                 <configuration>
                     <mainClass>br.eletra.frontend.Main</mainClass>
                     <verbose>true</verbose>
+                    <vendor>pdrflp</vendor>
+                    <additionalAppResources>${project.basedir}/src/main/resources</additionalAppResources>
                     <bundleArguments>
                         <identifier>updt-sensor</identifier>
                         <installdirChooser>true</installdirChooser>
                     </bundleArguments>
-                    <additionalAppResources>${project.basedir}/src/main/resources</additionalAppResources>
                 </configuration>
                 <executions>
                     <execution>
@@ -70,6 +71,14 @@
                 <version>3.2.4</version>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <filters>
+                        <filter>
+                            <artifact>*:module-info</artifact>
+                            <excludes>
+                                <exclude>module-info.class</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>br.eletra.frontend.Main</mainClass>
