--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.eletra</groupId>
-    <artifactId>integration_project_frontend</artifactId>
+    <artifactId>ProjectIntegration</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -40,6 +41,7 @@
                 <version>8.8.3</version>
                 <configuration>
                     <mainClass>br.eletra.frontend.Main</mainClass>
+                    <appName>ProjectIntegration</appName>
                     <verbose>true</verbose>
                     <vendor>pdrflp</vendor>
                     <additionalAppResources>${project.basedir}/src/main/resources</additionalAppResources>
