--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,26 @@
             <artifactId>integration_project_backend</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.25.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -40,7 +60,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>8.8.3</version>
                 <configuration>
-                    <mainClass>br.eletra.frontend.Main</mainClass>
+                    <mainClass>br.eletra.frontend.main.Main</mainClass>
                     <appName>ProjectIntegration</appName>
                     <verbose>true</verbose>
                     <vendor>pdrflp</vendor>
@@ -83,7 +103,7 @@
                     </filters>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>br.eletra.frontend.Main</mainClass>
+                            <mainClass>br.eletra.frontend.main.Main</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
